test/libsolidity/syntaxTests/using/using_empty_list_file_level.sol
using {} for uint;
// ----
// ParserError 2314: (7-8): Expected identifier but got '}'
